 * Added example custom dataset

2009-03-17 cjg
 * Document toolbox document add now reports document id rather than "OK"
 * Fixed bug in Field::Multi which didn't allow <help> in both the component
    and inside the field.
 * Added temporary conf settings to bin/toolbox to allow file & web import.

2009-03-17 cjg
 * Updated a search in User.pm to the new API.

2009-03-20 cjg
 * Added edit locking.

2009-03-25 tdb
 * Share system phrases across repositories

2009-03-25 tdb
 * Include the XHTML namespace in HTML output

2009-03-26 tdb
 * Share fields between inbox/buffer/archive/deletion (stored in eprint)

2009-03-27 tdb
 * Fixed to_string() calls not specifying noxmlns in Views (McSweeney)

2009-03-27 tdb
 * Modified index_queue to be a dataset
 * Added get_value_from_id method to MetaField
 * Refined EPrints::MetaField::Name::get_id_from_value to handle colons
 * If a name is defined all parts must be defined (""), fixing #3483

2009-03-30 tdb
 * Added upgrade to DB schema 3.1.2 - fix null parts of names

2009-03-30 cjg
 * Added spinny ajax loading icon to autocompleter.

2009-04-01 tdb
 * Added "profile" command to epadmin (run a unit test under profiling)
 * Added OnlineSession utility test module

2009-04-01 dct
 * Updated Plugin/Screen/Admin/Config/Edit.pm to allow users to download fully encapsulated web pages for offline editing before re-uploading them via the same page. The uploaded content is split back into phrases and page parts which are put back in the correct EPrints places.
 * Updated above such that edited phrases are put in the zz_webcfg.xml phrase file and not in the archive phrase file. 

2009-04-02 tdb
 * Refactored MetaField to speed up load time & not to allocate memory for
    undef
 * Refactored Plugin registry to "PluginFactory" (same access via Session)

2009-04-03 tdb
 * Changed default type for creators_id to email
 * Email searches now perform exact matches rather than text indexing
